--- a/ContactManager/style.css
+++ b/ContactManager/style.css
@@ -1,25 +1,30 @@
-.body
+body
 {
     margin-left: 100px;
     margin-top: 50px;
     font-family: monospace;
 }
 
+/* Contact Box */
 .contactBox
 {
     height: 300px;
     width: 400px;
     padding: 10px;
+    margin-top: 20px;
     background-color: rgb(66, 85, 97);
     position: relative;
     box-shadow: 5px 5px grey;
     transition: 1s;
+
+    border-radius: 10px;
 }
 
 .contactBox:hover 
 {
     transform: translate(5px, 5px);
     box-shadow: 0px 0px;
+    border-radius: 10px;
     transition: 1s;
 }
 
@@ -61,4 +66,19 @@ span>img
     position: absolute;
     bottom: 10px;
     cursor: pointer;
+}
+
+/* Contact Input Box */
+.contactInputBox
+{
+    display: inline-block;
+    background-color: rgb(255, 140, 26);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+input
+{
+    background-color: whitesmoke;
+    margin-bottom: 30px;
 }
