--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -5,6 +5,7 @@ body
     color: whitesmoke;
     margin-top: 100px;
     background-color: rgba(0, 0, 0, 0.9);
+    user-select: none;
 }
 
 #outputBox
@@ -26,6 +27,7 @@ body
 {
     margin-top: 100px;
 }
+
 
 .button
 {
@@ -54,5 +56,10 @@ body
 {
     font-weight: bolder;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.notWorking
+{
+    background-color: red;
 }
 
